--- a/dice.css
+++ b/dice.css
@@ -1,11 +1,13 @@
 body {
-    background-color: #000;
-    height: 100vh;
-    margin: 0;
+    background-image: url(./img/dice.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     display: flex;
-    text-align: center;
+    justify-content: start;
     align-items: center;
-    justify-content: center;
+    height: 100vh;
+    margin: 0px;
 }
 
 div.dice {
@@ -21,6 +23,11 @@ div.dice {
 
 main {
     text-align: center;
+    width: 40%;
+    background: #4c4c4c;
+    padding: 50px 0;
+    box-shadow: #000 0px 0px 10px 0px;
+    margin: 50px;
 }
 
 .container1 {
@@ -50,7 +57,6 @@ button {
     font-family: monospace;
     font-size: 18px;
     font-weight: 600;
-    cursor: pointer;
 }
 
 h2#status {
