--- a/dice.css
+++ b/dice.css
@@ -24,7 +24,7 @@ div.dice {
 main {
     text-align: center;
     width: 40%;
-    background: #4c4c4c;
+    background: #0e0e0e;
     padding: 50px 0;
     box-shadow: #000 0px 0px 10px 0px;
     margin: 50px;
